[package]
name = "rustify-route-guards"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
thiserror = "2.0.12"
proc-macro2 = "1.0.95"

actix-web = { version = "4.11.0", optional = true }